typewire/tests/compile_fail/internal_tag_multi_tuple.rs
use typewire::Typewire;

#[derive(Typewire)]
#[serde(tag = "type")]
enum Bad {
    Unit,
    Multi(u32, String),
}

fn main() {}
