typewire/tests/compile_fail/internal_tag_multi_tuple.stderr
error: tuple variants with more than one field cannot be used with #[serde(tag = "...")]
 --> tests/compile_fail/internal_tag_multi_tuple.rs:7:5
  |
7 |     Multi(u32, String),
  |     ^^^^^^^^^^^^^^^^^^
